update searches
