# src/main/kotlin/com/wutsi/platform/chat/dto/Message.kt
@@ -11,6 +11,7 @@ public data class Message(
     public val senderId: Long = 0,
     public val recipientId: Long = 0,
     public val text: String = "",
+    public val timestamp: Long = 0,
     @get:DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     public val created: OffsetDateTime = OffsetDateTime.now(),
     public val deviceId: String? = null
