# src/main/kotlin/com/wutsi/platform/chat/dto/SendMessageRequest.kt
@@ -7,5 +7,6 @@ import kotlin.String
 public data class SendMessageRequest(
     public val recipientId: Long = 0,
     @get:NotBlank
-    public val text: String = ""
+    public val text: String = "",
+    public val timestamp: Long = 0
 )
